<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColorPrimary"
    tools:context="com.projetocronos.cronos.cronos.fragments.Marcador">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_height="150dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/descricao_arvore_mapa" />

            <EditText
                android:id="@+id/descricaoMapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/latitude_arvore_mapa" />

            <EditText
                android:id="@+id/latitudeMapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/longitude_arvore_mapa" />

            <EditText
                android:id="@+id/longitudeMapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/idade_arvore_mapa" />

            <EditText
                android:id="@+id/idadeArvore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/diametro_arvore_mapa" />

            <EditText
                android:id="@+id/diametroArvore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/altura_arvore_mapa" />

            <EditText
                android:id="@+id/alturaArvore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/altura_ramo_arvore_mapa" />

            <EditText
                android:id="@+id/alturaRamoArvore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/altura_fiacao_arvore" />

            <EditText
                android:id="@+id/alturaFiacaoArvore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/altura_copa_arvore" />

            <EditText
                android:id="@+id/alturaCopaArvore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/doenca_arvore" />

            <EditText
                android:id="@+id/doencaArvore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/obs_arvore" />

            <EditText
                android:id="@+id/obsArvore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/texto_sp_especie" />

            <Spinner
                android:id="@+id/spinnerEspecie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/texto_sp_fiacao" />

            <Spinner
                android:id="@+id/spinnerFiacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:spinnerMode="dialog" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/texto_sp_inclinacao" />

            <Spinner
                android:id="@+id/spinnerInclinacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/texto_sp_calcada" />

            <Spinner
                android:id="@+id/spinnerCalcada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/texto_sp_plantio" />

            <Spinner
                android:id="@+id/spinnerPlantio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/texto_sp_radicular" />

            <Spinner
                android:id="@+id/spinnerRadicular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/texto_sp_intervencao" />

            <Spinner
                android:id="@+id/spinnerIntervencao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:spinnerMode="dialog" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/texto_sp_poda" />

            <Spinner
                android:id="@+id/spinnerPoda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:spinnerMode="dialog" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/texto_sp_qualidade" />

            <Spinner
                android:id="@+id/spinnerQualidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:spinnerMode="dialog" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_weight="1"
                android:text="@string/texto_sp_area" />

            <Spinner
                android:id="@+id/spinnerArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:spinnerMode="dialog" />



            <Button
                android:id="@+id/gravarDados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/botao_gravar_marcador"
                android:textColor="@color/textColorPrimary" />

            <Button
                android:id="@+id/acessarCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/botao_acessar_camera"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>
