<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/textColorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/altura_logo_cronos"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/logo_cronos_formatado" />

            <EditText
                android:id="@+id/edit_email_login_cronos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView5"
                android:layout_marginTop="33dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_email_login_cronos"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <EditText
                android:id="@+id/edit_senha_login_cronos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edit_email_login_cronos"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_senha_login_cronos"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <CheckBox
                android:id="@+id/chk_manter_conectado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/edit_senha_login_cronos"
                android:layout_marginTop="13dp"
                android:text="@string/chk_manter_conectado"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/botao_logar_cronos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/texto_cadastrar"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/botao_logar_cronos"
                android:textColor="@color/textColorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_trocar_senha"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textAlignment="center"
                android:text="@string/texto_login_ou_cadastrar" />

            <TextView
                android:id="@+id/texto_cadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:text="@string/texto_cadastrar_usuario"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
