<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/largura_logo"
        android:layout_height="@dimen/altura_logo"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/validador_cabecalho"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/textColorPrimary"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:text="@string/validador_descricao"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/textColorPrimary" />

    <EditText
        android:id="@+id/edit_validador"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="Digite o Código!"
        android:inputType="number" />

    <Button
        android:id="@+id/bt_validar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_validador"
        android:layout_marginTop="33dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/botao_validar"
        android:textColor="@color/textColorPrimary" />
</RelativeLayout>
