<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="33dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:indeterminateDrawable="@drawable/circular"
                android:max="100"
                android:progress="20"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/edit_cliente_dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/botao_carregar"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="50dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:hint="@string/hint_codigo_cliente"
                android:inputType="number" />

            <EditText
                android:id="@+id/edit_chave_carregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="50dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:ems="10"
                android:hint="@string/hint_chave_cliente"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/botao_carregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edit_chave_carregar"
                android:layout_alignLeft="@+id/edit_chave_carregar"
                android:layout_alignRight="@+id/edit_chave_carregar"
                android:layout_alignStart="@+id/edit_chave_carregar"
                android:layout_below="@+id/edit_chave_carregar"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/botao_carregar_dados"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>


